Löst att kunna skriva i nya erfarenheter. Nu ska de bara kunna raderas också

--- a/src/about.html
+++ b/src/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om lösningen</title>
+    <script src="js/main.js" type="module"></script>
 </head>
 <body>
     <nav>
