--- a/src/add.html
+++ b/src/add.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lägg till ny</title>
+    <script src="js/main.js" type="module"></script>
 </head>
 <body>
 
@@ -27,7 +28,7 @@
         <label for="location">Plats/Stad:</label><br>
         <input type="text" name="location" id="location"><br>
         <br>
-        <button id="submitBtn">Lägg till</button>
+        <button type="submit" id="submitBtn">Lägg till</button>
     </form>
 </body>
 </html>
