Lägt till style på sidan

--- a/src/add.html
+++ b/src/add.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lägg till ny</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" type="module"></script>
 </head>
 <body>
 
     <nav>
-        <ul>
+        <ul id="navList">
             <a href="index.html"><li>Start</li></a>
             <a href="add.html"><li>Lägg till erfarenhet</li></a>
             <a href="about.html"><li>Om Lösningen</li></a>
         </ul>
     </nav>
+    
+    <main>
 
     <h1>Lägg till nya arbetserfarenheter:</h1>
 
@@ -30,5 +33,7 @@
         <br>
         <button type="submit" id="submitBtn">Lägg till</button>
     </form>
+    
+    </main>
 </body>
 </html>
