--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webbplats moment 2 backend</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" type="module"></script>
 </head>
 <body>
-    
     <nav>
-        <ul>
+        <ul id="navList">
             <a href="index.html"><li>Start</li></a>
             <a href="add.html"><li>Lägg till erfarenhet</li></a>
             <a href="about.html"><li>Om Lösningen</li></a>
         </ul>
     </nav>
+
+    <main>
 
     <h1>Webbplats Test Backend 2.2</h1>
 
@@ -22,5 +24,7 @@
     <div id="expList">
 
     </div>
+
+    </main>
 </body>
 </html>
