--- a/src/add.html
+++ b/src/add.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lägg till ny</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" type="module"></script>
+    <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
 
@@ -20,7 +20,7 @@
     <main>
 
     <h1>Lägg till nya arbetserfarenheter:</h1>
-
+    <div id="errorDiv"></div>
     <form>
         <label for="company">Arbetsgivare:</label><br>
         <input type="text" name="company" id="company"><br>
@@ -33,7 +33,7 @@
         <br>
         <button type="submit" id="submitBtn">Lägg till</button>
     </form>
-    
+
     </main>
 </body>
 </html>
